# basic-foundation

./: .bumpversion.cfg  .coveragerc  .env.ci  .gitignore  .pre-commit-config.yaml  .python-version  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  render.yml  tailwind.config.js  version.txt
.github/: dependabot.yml
.github/workflows/: api-test.yml  basic-api-test.yml  basic-foundation-test.yml  python-test.yml  release.yml
api/: package-lock.json  package.json
api/src/api/: app.py  db.py  deps.py  routes.py
api/src/basic_api/: app.py  db.py  main.py  repository.py
api/templates/layouts/: auth.html
api/templates/pages/: user_edit.html
api/tests/: __init__.py
api/tests/api/: conftest.py  test_db_transaction_rollback.py  test_main.py  test_repository.py
api/tests/basic_api/: test_db_transaction_rollback.py  test_main.py
api/tests/fastpi_users/: conftest.py  test_fastapi_users.py
app/: README.md  pytest.ini
app/src/: web_test_utils.py
app/src/app/: app.py  config.py  deps.py  models.py  repository.py  routes.py  services.py
app/src/foundation/: app.py  main.py
app/src/tools/: init_data.py
app/tests/: utils.py
app/tests/app/: conftest.py  test_db_transaction_rollback.py  test_model_user.py  test_repository.py
app/tests/foundation/: conftest.py  test_main.py
app/tests/playwright/: test_login.py
basic-api/: LICENSE.txt  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
basic-api/db/: schema.sql
basic-api/db/migrations/: 20240211163316_add_user_firstname_lastname.sql  20240211180307_initial_schema.sql  20240211180503_user_firstname_lastname.sql
basic-api/src/basic_api/: __about__.py  app.py  config.py  db.py  deps.py  main.py  routes.py  users.py
basic-api/src/basic_api/users/: deps.py  managers.py  models.py  routes.py
basic-api/static/: test.html
basic-api/static/css/: style.css
basic-api/templates/: base.html  error.html  index.html  item.html  login.html  private.html  register-form.html  register.html  success.html
basic-api/templates/layouts/: base.html  dashboard.html  layout.html.jinja
basic-api/templates/pages/: dashboard.html  index.html.jinja  login.html  login.html.jinja  register.html  register.html.jinja  user_edit.html  user_list.html  user_view.html
basic-api/templates/partials/: navbar.html  navbar.html.jinja  side_navbar.html  side_navbar.html.jinja
basic-api/tests/: __init__.py
basic-api/tests/basic_api/: conftest.py  test_db_transaction_rollback.py  test_main.py  test_repository.py
basic-api/tests/fastpi_users/: test_fastapi_users.py
basic-api/tests/playwright/: test_login.py
db/: schema.sql
db/migrations/: 20240211180307_initial_schema.sql  20240929013917_update_user_table_roles_and_status.sql
foundation/: app.py  conftest.py  main.py  test_utils.py
foundation/api/: deps.py
foundation/api/routes/: __init__.py  auth.py  users.py
foundation/core/: config.py  db.py  deps.py  email.py  emails.py  models.py  pagination.py  repository.py  security.py
foundation/core/test/: test_emails.py
foundation/core/users/: __init__.py  deps.py  schemas.py  services.py
foundation/test/: conftest.py  test_main.py
foundation/test/api/: test_auth_routes.py  test_user_routes.py
foundation/test/core/: test_emails.py
foundation/test/web/: conftest.py  utils.py
foundation/tools/: init_data.py
foundation/users/: __init__.py  deps.py  models.py  schemas.py  services.py
foundation/users/test/: test_get_current_user.py  test_schemas.py  test_user_pagination.py  test_user_repository.py  test_user_services.py
foundation/web/: deps.py  forms.py  package-lock.json  templates.py  utils.py
foundation/web/routes/: app.py  auth.py  users.py
modules/foundation/: conftest.py
modules/foundation/api/: deps.py
modules/foundation/web/: .prettierrc  deps.py  forms.py  templates.py  utils.py  web_test_utils.py
static/: pines.html  test.html
templates/: item.html  macros.html
templates/email/src/: reset_password.mjml
templates/layouts/: application.html  auth.html  base.html  dashboard.html  modal.html  page.html
templates/macros/: stat.html
templates/pages/: 403.html  404.html  500.html  dashboard.html  forgot_password.html  index.html  login.html  register.html  reset_password.html  user_create.html  user_edit.html  user_list.html  user_modal.html  user_view.html  users.html
templates/partials/: breadcrumb.html  dark_mode_toggle.html  flash_message.html  logo.html  navbar.html  notification.html  pagination.html  stat.html
templates/partials/auth/: forgot_password_form.html  login_form.html  register_form.html  reset_password_form.html
templates/partials/user/: user_detail_edit.html  user_detail_error.html  user_detail_view.html  user_edit_error.html  user_form.html  user_list.html  user_list_edit.html  user_list_error.html  user_list_row_edit.html  user_list_row_error.html  user_list_row_view.html  user_list_view.html  user_modal_delete.html  user_modal_edit.html
web/: .prettierrc  package-lock.json  package.json  tailwind.config.js
web/components/: Breadcrumbs.jinja  DarkModeToggle.jinja  LazyLoad.jinja  Loading.jinja  Logo.jinja  Notification.jinja  Pagination.jinja  README.md  Stat.jinja  SvgLoader.jinja
web/components/auth/: ForgotPasswordForm.jinja  LoginForm.jinja  RegisterForm.jinja  ResetPasswordForm.jinja
web/components/blocks/: Dashboard.jinja  ForgotPassword.jinja  Login.jinja  Navbar.jinja  TableList.jinja
web/components/form/: Form.jinja  SelectInput.jinja  Submit.jinja  TextInput.jinja
web/components/icons/: AArrowDown.jinja  AArrowUp.jinja  ALargeSmall.jinja  Accessibility.jinja  Activity.jinja  AirVent.jinja  Airplay.jinja  AlarmClock.jinja  AlarmClockCheck.jinja  AlarmClockMinus.jinja  (+1520 more)
web/layouts/: Admin.jinja  AdminLayout.jinja  Application.jinja  Auth.jinja  AuthLayout.jinja  Base.jinja  BaseLayout.jinja  Page.jinja  PageLayout.jinja
web/src/: routes.py
web/templates/: macros.html
(+281 files in other folders)
