[tool.poetry]
name = "basic-api"
version = "0.1.0"
description = "Saas platform api"
authors = ["phernandez <phernandez@basicmachines.co>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
fastapi-users = { extras = ["sqlalchemy"], version = "^12.1.2" }
aiosqlite = "^0.19.0"
setuptools = "^69.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"

# only used in github actions
pytest-asyncio = "^0.23.3"
asgi-lifespan = "^2.1.0"
httpx-oauth = "^0.13.1"
pytest-mock = "^3.12.0"
[tool.poetry.group.github-actions]
optional = true
[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
